Fix math syntax; improve readability

--- a/modules/5.md
+++ b/modules/5.md
@@ -11,17 +11,16 @@
 
 # 1.5 HEXADECIMAL NUMBER SYSTEM
 
-- A number system with a base (radix) $ 16 $ is called Hexadecimal Number System
-  and uses the following digits $ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 $ and letters $
-  A, B, C, D, E, F $.
+- A number system with a base (radix) $16$ is called Hexadecimal Number System
+  and uses the following digits $0, 1, 2, 3, 4, 5, 6, 7, 8, 9$ and letters $A, B, C, D, E, F$.
 - When the number is given in an Hexadecimal Number System, every place of the
-  digits letter represents a power of $ 16 $ (or $ 2^4 $).
+  digits letter represents a power of $16$ (or $2^4$).
 
 ### Example 1: Count in Hexadecimal Number System as indicated:
 
-1. From $ 8_{(16)} $ To $ 12_{(16)} $
+1. From $8_{(16)}$ To $12_{(16)}$
 
-- $ 8_{(16)}; $
+- $8_{(16)};$
   <input type="number" style="background-color:#0F1217;color:white;">;
   <input type="number" style="background-color:#0F1217;color:white;">;
   <input type="number" style="background-color:#0F1217;color:white;">;
@@ -30,20 +29,21 @@
   <input type="number" style="background-color:#0F1217;color:white;">;
   <input type="number" style="background-color:#0F1217;color:white;">;
   <input type="number" style="background-color:#0F1217;color:white;">;
-  <input type="number" style="background-color:#0F1217;color:white;">; $
-  12_{(16)} $
+  <input type="number" style="background-color:#0F1217;color:white;">;
+  $12_{(16)}$
+
   <details>
     <summary style="color: green;">See Answer Q1</summary>
     <h3>
 
-  $ { \color{green} 9; A; B; C; D; E; F; 10; 11; } $
+  ${ \color{green} 9; A; B; C; D; E; F; 10; 11; }$
   </h3>
     </details>
     <hr />
 
-2. From $ A98_{(16)} $ To $ AA1_{(16)} $
+2. From $A98_{(16)}$ To $AA1_{(16)}$
 
-- $ A98_{(16)}; $
+- $A98_{(16)};$
   <input type="number" style="background-color:#0F1217;color:white;">;
   <input type="number" style="background-color:#0F1217;color:white;">;
   <input type="number" style="background-color:#0F1217;color:white;">;
@@ -51,20 +51,21 @@
   <input type="number" style="background-color:#0F1217;color:white;">;
   <input type="number" style="background-color:#0F1217;color:white;">;
   <input type="number" style="background-color:#0F1217;color:white;">;
-  <input type="number" style="background-color:#0F1217;color:white;">; $
-  AA1_{(16)} $
+  <input type="number" style="background-color:#0F1217;color:white;">;
+  $AA1_{(16)}$
+
   <details>
     <summary style="color: green;">See Answer Q2</summary>
     <h3>
 
-  $ { \color{green} A99; A9A; A9B; A9C; A9D; A9E; A9F; AA0; } $
+  ${ \color{green} A99; A9A; A9B; A9C; A9D; A9E; A9F; AA0; }$
   </h3>
     </details>
     <hr />
 
-3. From $ C9FA_{(16)} $ To $ CA03_{(16)} $
+3. From $C9FA_{(16)}$ To $CA03_{(16)}$
 
-- $ C9FA_{(16)}; $
+- $C9FA_{(16)};$
   <input type="number" style="background-color:#0F1217;color:white;">;
   <input type="number" style="background-color:#0F1217;color:white;">;
   <input type="number" style="background-color:#0F1217;color:white;">;
@@ -72,13 +73,14 @@
   <input type="number" style="background-color:#0F1217;color:white;">;
   <input type="number" style="background-color:#0F1217;color:white;">;
   <input type="number" style="background-color:#0F1217;color:white;">;
-  <input type="number" style="background-color:#0F1217;color:white;">; $
-  CA03_{(16)} $
+  <input type="number" style="background-color:#0F1217;color:white;">;
+  $CA03_{(16)}$
+
   <details>
     <summary style="color: green;">See Answer Q3</summary>
     <h3>
 
-  $ { \color{green} C9FB; C9FC; C9FC; C9FD; C9FE; C9FF; CA00; CA02; } $
+  ${ \color{green} C9FB; C9FC; C9FC; C9FD; C9FE; C9FF; CA00; CA02; }$
   </h3>
     </details>
     <hr />
@@ -90,118 +92,112 @@
 
 - The procedure for converting between Hexadecimal and Decimal Number System is
   similar to the one converting between Binary and Decimal.
-- The digit positions to the left of the hexadecimal point represent $ 16^0,
-  16^1, 16^2, 16^3, \cdots $ and the digit positions to the right of the octal
-  point represent $ 16^{-1}, 16^{-2}, 16^{-3}, \cdots $
-- The values of the letters are: $ A = 10; B = 11; C = 12; D = 13; E = 14; F =
-  15 $
-- The positional values based on powers of $ 16 $ are then evaluated (as in the
+- The digit positions to the left of the hexadecimal point represent $16^0,
+  16^1, 16^2, 16^3, \cdots$ and the digit positions to the right of the octal
+  point represent $16^{-1}, 16^{-2}, 16^{-3}, \cdots$
+- The values of the letters are: $A = 10; B = 11; C = 12; D = 13; E = 14; F = 15$
+- The positional values based on powers of $16$ are then evaluated (as in the
   Decimal Number System) to obtain the equivalent decimal number.
-- For example, $ \\ B0393D_{(16)} \to \\ = B(16^5) + 0(16^4) + 3(16^3) +
+- For example, $\\ B0393D_{(16)} \to \\ = B(16^5) + 0(16^4) + 3(16^3) +
   9(16^2) + 3(16^1) + D(16^0) \\ = 11(16^5) + 0(16^4) + 3(16^3) + 9(16^2) +
   3(16^1) + 13(16^0) \\ = 11(1,048,576) + 0(65,536) + 3(4,096) + 9(256) +
   3(16) + 13(1) \\ = 11,534,336 + 0 + 12,288 + 2,304 + 48 + 13 \\ =
-  B0393D_{(16)} = { \color{green} 11,548,989_{(10)} } $
+  B0393D_{(16)} = { \color{green} 11,548,989_{(10)} }$
 
 - To convert a fractional portion of a decimal number we use successive
-  multiplication by $ 16 $.
-- For example, to convert $ 0.948_{(10)} $ to its hexadecimal equivalent we
-  have: $ \\ 0.948 \to \\ \;\;{ \color{green} . }|948 \to 0.948 \times 16 =
+  multiplication by $16$.
+- For example, to convert $0.948_{(10)}$ to its hexadecimal equivalent we
+  have: $\\ 0.948 \to \\ \;\;{ \color{green} . }|948 \to 0.948 \times 16 =
   15.168; (F = 15) \\ { \color{green} F }|168 \to 0.168 \times 16 = 2.688; \\
   \;{ \color{green} 2 }|688 \to 0.688 \times 16 = 11.008; (B = 11) \\ {
   \color{green} B }|008 \to 0.008 \times 16 = 0.128; \\ \;{ \color{green} 0
   }|128 \to 0.128 \times 16 = 2.048; \\ \;{ \color{green} 2 }|048 \to 0.048
   \times 16 = 0.768; \\ \;{ \color{green} 0 }|048 \to 0.768 \times 16 = \cdots
   \\ { \color{pink} Therefore } \;\; 0.948_{(10)} = { \color{green} 0.F2B020
-  \cdots _{(16)} } $
+  \cdots _{(16)} }$
 
 - Usually it is specified in the question how many places after the hexadecimal
   point the answer should have.
 
 ### Example 2: Convert the following decimal numbers to their hexadecimal number system equivalent:
 
-1. $ 475_{(10)} $
-   <input type="number" style="background-color:#0F1217;color:white;">$ _{(16)}
-   $
+1. $475_{(10)}$
+   <input type="number" style="background-color:#0F1217;color:white;"> $_{(16)}$
    <details>
    <summary style="color: green;">See Answer Q1</summary>
 
-   $ \\ 475_{(10)} \to \\ 475|{ \color{green} B } \to 475 \div 16 = 29.6875; \to
+   $\\ 475_{(10)} \to \\ 475|{ \color{green} B } \to 475 \div 16 = 29.6875; \to
    0.6875 \times 16 = 11; (11 = B) \\ \;\;29|{ \color{green} D } \to \;\; 29
    \div 16 = 1.8125; \; \to 0.8125 \times 16 = 13; (13 = D) \\ \quad 1|{
-   \color{green} 1 } \to \quad \;\; 1 \div 16 = \cdots; \\ = 1DB_{(16)} $
+   \color{green} 1 } \to \quad \;\; 1 \div 16 = \cdots; \\ = 1DB_{(16)}$
    <h3>
 
-   $ 475_{(10)} = { \color{green} 1DB_{(16)} } $
+   $475_{(10)} = { \color{green} 1DB_{(16)} }$
    </h3>
     </details>
     <hr />
 
-2. $ 956230_{(10)} $
-   <input type="number" style="background-color:#0F1217;color:white;">$ _{(16)}
-   $
+2. $956230_{(10)}$
+   <input type="number" style="background-color:#0F1217;color:white;"> $_{(16)}$
    <details>
    <summary style="color: green;">See Answer Q2</summary>
 
-   $ \\ 956230_{(10)} \to \\ 956230|{ \color{green} 6 } \to 956230 \div 16 =
+   $\\ 956230_{(10)} \to \\ 956230|{ \color{green} 6 } \to 956230 \div 16 =
    59764.375; \to 0.375 \times 16 = 6; \\ \;\;59764|{ \color{green} 4 } \to
    \;\;59764 \div 16 = 3735.25; \; \to 0.25 \times 16 = 4; \\ \quad 3735|{
    \color{green} 7 } \to \quad 3735 \div 16 = 233.4375; \; \to 0.4375 \times 16
    = 7; \\ \quad\;\; 233|{ \color{green} 9 } \to \quad\;\; 233 \div 16 =
    14.5625; \; \to 0.5625 \times 14 = 9; (14 = E) \\ \qquad 14|{ \color{green} E
-   } \to \quad\;\;\; 14 \div 16 = \cdots; \\ = E9746_{(16)} $
+   } \to \quad\;\;\; 14 \div 16 = \cdots; \\ = E9746_{(16)}$
    <h3>
 
-   $ 956230_{(10)} = { \color{green} E9746_{(16)} } $
+   $956230_{(10)} = { \color{green} E9746_{(16)} }$
    </h3>
     </details>
     <hr />
 
-3. $ 0.75_{(10)} $
-   <input type="number" style="background-color:#0F1217;color:white;">$ _{(16)}
-   $
+3. $0.75_{(10)}$
+   <input type="number" style="background-color:#0F1217;color:white;"> $_{(16)}$
    <details>
    <summary style="color: green;">See Answer Q3</summary>
 
-   $ \\ 0.75 \to \\ \;\;{ \color{green} . }|75 \to 0.75 \times 16 = 12; (C = 12)
-   \\ { \color{green} C }|12 \to \;\;0.0 \times 16 = \cdots \\ = 0.C_{(16)} $
+   $\\ 0.75 \to \\ \;\;{ \color{green} . }|75 \to 0.75 \times 16 = 12; (C = 12)
+   \\ { \color{green} C }|12 \to \;\;0.0 \times 16 = \cdots \\ = 0.C_{(16)}$
 
    <h3>
 
-   $ 0.75_{(10)} = { \color{green} 0.C_{(16)} } $
+   $0.75_{(10)} = { \color{green} 0.C_{(16)} }$
    </h3>
     </details>
     <hr />
 
-4. $ 0.647_{(10)} $
-   <input type="number" style="background-color:#0F1217;color:white;">$ _{(16)}
-   $ (to 6 places after the fractional point)
+4. $0.647_{(10)}$
+   <input type="number" style="background-color:#0F1217;color:white;"> $_{(16)}$ (to $6$ places after the fractional point)
    <details>
    <summary style="color: green;">See Answer Q4</summary>
 
-   $ \\ 0.647 \to \\ \;\;{ \color{green} . }|647 \to 0.647 \times 16 = 10.352;
+   $\\ 0.647 \to \\ \;\;{ \color{green} . }|647 \to 0.647 \times 16 = 10.352;
    (10 = A) \\ { \color{green} A }|352 \to 0.352 \times 16 = 5.632 \\ \;{
    \color{green} 5 }|632 \to 0.632 \times 16 = 10.112; (10 = A) \\ {
    \color{green} A }|112 \to 0.112 \times 16 = 1.792 \\ \;{ \color{green} 1
    }|792 \to 0.792 \times 16 = 12.672; (12 = C) \\ { \color{green} C }|672 \to
    0.672 \times 16 = 10.752; (10 = A) \\ { \color{green} A }|752 \to 0.752
-   \times 16 = \cdots \\ = 0.A5A1CA_{(16)} $
+   \times 16 = \cdots \\ = 0.A5A1CA_{(16)}$
 
    <h3>
 
-   $ 0.647_{(10)} = { \color{green} 0.A5A1CA_{(16)} } $
+   $0.647_{(10)} = { \color{green} 0.A5A1CA_{(16)} }$
    </h3>
     </details>
     <hr />
 
 ## 1.5.3 CONVERTING BETWEEN HEXADECIMAL AND BINARY NUMBER SYSTEM
 
-- The Hexadecimal Number System has a base 16 which is also a power of $ 2,
-  (2^4) $.
+- The Hexadecimal Number System has a base 16 which is also a power of $2, (2^4)$.
 - This means that the hexadecimal and the binary numbers "align" at every forth
   position.
-- Consider the following example: $ 100111011011_{(2)} $
-- $ 100111011011_{(2)} \to \\ = 1(2^{11}) + 0(2^{10}) + 0(2^9) + 1(2^8) +
+- Consider the following example: $100111011011_{(2)}$
+- $100111011011_{(2)} \to \\ = 1(2^{11}) + 0(2^{10}) + 0(2^9) + 1(2^8) +
   1(2^7) + 1(2^6) + 0(2^5) + 1(2^4) + 1(2^3) + 0(2^2) + 1(2^1) + 1(2^0) \\ = {
   \color{lightblue} (1(2^{11}) + 0(2^{10}) + 0(2^9) + 1(2^8)) } + {
   \color{lightyellow} (1(2^7) + 1(2^6) + 0(2^5) + 1(2^4)) } + {
@@ -228,149 +224,148 @@
   \color{lightyellow} D } \times { \color{lightgreen} (16) }^1 + {
   \color{lightpink} B } \times { \color{lightgreen} (16) }^0 \\ = {
   \color{lightblue} 9 }{ \color{lightyellow} D }{ \color{lightpink} B } \\ =
-  100111011011_{(2)} = { \color{green} 9DB_{(16)} } $
+  100111011011_{(2)} = { \color{green} 9DB_{(16)} }$
 
-- Every hexadecimal digit corresponds to a group of four binary digits: $ \\
+- Every hexadecimal digit corresponds to a group of four binary digits: $\\
   0_{(16)} = 0000_{(2)} \qquad \;8_{(16)} = 1000_{(2)} \\ 1_{(16)} = 0001_{(2)}
   \qquad \;9_{(16)} = 1001_{(2)} \\ 2_{(16)} = 0010_{(2)} \qquad A_{(16)} =
   1010_{(2)} \\ 3_{(16)} = 0011_{(2)} \qquad B_{(16)} = 1011_{(2)} \\ 4_{(16)} =
   0100_{(2)} \qquad C_{(16)} = 1100_{(2)} \\ 5_{(16)} = 0101_{(2)} \qquad
   D_{(16)} = 1101_{(2)} \\ 6_{(16)} = 0110_{(2)} \qquad E_{(16)} = 1110_{(2)} \\
-  7_{(16)} = 0111_{(2)} \qquad F_{(16)} = 1111_{(2)} \\ $
+  7_{(16)} = 0111_{(2)} \qquad F_{(16)} = 1111_{(2)} \\$
 
 - In order to convert a number from Hexadecimal to Binary Number System we can
   replace each hexadecimal digit to its binary equivalent.
-- For example, $ \\ A894DC_{(16)} \to $
+- For example, $\\ A894DC_{(16)} \to$
 
-  | $ A $    | $ 8 $    | $ 9 $    | $ 4 $    | $ D $    | $ C $    |
+  | $A$    | $8$    | $9$    | $4$    | $D$    | $C$    |
   | -------- | -------- | -------- | -------- | -------- | -------- |
-  | $ 1010 $ | $ 1000 $ | $ 1001 $ | $ 0101 $ | $ 1101 $ | $ 1100 $ |
+  | $1010$ | $1000$ | $1001$ | $0101$ | $1101$ | $1100$ |
 
-  $ { \color{green} = 1010 1000 1001 0101 1101 1100_{(2)} } $
+  ${ \color{green} = 1010 1000 1001 0101 1101 1100_{(2)} }$
 
 ## 1.5.4 CONVERTING BETWEEN HEXADECIMAL AND OCTAL NUMBER SYSTEM
 
 - The conversion between Hexadecimal and Octal Number System can be performed
   through Binary Number System.
-- For example, $ \\ B793EC_{(16)} \to $
+- For example, $\\ B793EC_{(16)} \to$
 
-  | $ B $    | $ 7 $    | $ 9 $    | $ 3 $    | $ E $    | $ C $    |
+  | $B$    | $7$    | $9$    | $3$    | $E$    | $C$    |
   | -------- | -------- | -------- | -------- | -------- | -------- |
-  | $ 1011 $ | $ 0111 $ | $ 1001 $ | $ 0011 $ | $ 1110 $ | $ 1100 $ |
+  | $1011$ | $0111$ | $1001$ | $0011$ | $1110$ | $1100$ |
 
-  $ = { \color{lightgreen} 101 101 111 001 001 111 101 100_{(2)} } \to $
+  $= { \color{lightgreen} 101 101 111 001 001 111 101 100_{(2)} } \to$
 
-  | $ 101 $ | $ 101 $ | $ 111 $ | $ 001 $ | $ 001 $ | $ 111 $ | $ 101 $ | $ 100 $ |
+  | $101$ | $101$ | $111$ | $001$ | $001$ | $111$ | $101$ | $100$ |
   | ------- | ------- | ------- | ------- | ------- | ------- | ------- | ------- |
-  | $ 5 $   | $ 5 $   | $ 7 $   | $ 1 $   | $ 1 $   | $ 7 $   | $ 5 $   | $ 4 $   |
+  | $5$   | $5$   | $7$   | $1$   | $1$   |$7$   | $5$   | $4$   |
 
-  $ B793EC_{(16)} = { \color{green} 55711754_{(8)} } $
+  $B793EC_{(16)} = { \color{green} 55711754_{(8)} }$
 
 ### Example 3: Convert the following hexadecimal numbers to their Octal Number System equivalent:
 
-1. $ 8CD1B_{(16)} $
-   <input type="number" style="background-color:#0F1217;color:white;">$ _{(2)};
-   $ <input type="number" style="background-color:#0F1217;color:white;"> $
-   _{(8)} $
+1. $8CD1B_{(16)}$
+   <input type="number" style="background-color:#0F1217;color:white;"> $_{(2)};
+   $<input type="number" style="background-color:#0F1217;color:white;"> $_{(8)}$
    <details>
    <summary style="color: green;">See Answer Q1</summary>
 
-   $ = 8,C,D,1,B_{(16)}; \\ = 1000,1100,1101,0001,1011_{(2)}; \\ =
-   {\color{gray}0}10,001,100,110,100,011,011_{(2)}; \\ = 2,1,4,6,4,3,3_{(8)}; $
+   $= 8,C,D,1,B_{(16)}; \\ = 1000,1100,1101,0001,1011_{(2)}; \\ =
+   {\color{gray}0}10,001,100,110,100,011,011_{(2)}; \\ = 2,1,4,6,4,3,3_{(8)};$
    <h3>
 
-   $ 8CD1B_{(16)} = { \color{green} 10001100110100011011_{(2)} } = {
-   \color{green} 2146433_{(8)} } $
+   $8CD1B_{(16)} = { \color{green} 10001100110100011011_{(2)} } = {
+   \color{green} 2146433_{(8)} }$
    </h3>
     </details>
     <hr />
 
-2. $ 0.2DC9_{(16)} $
-   <input type="number" style="background-color:#0F1217;color:white;">$ _{(2)};
-   $ <input type="number" style="background-color:#0F1217;color:white;"> $
-   _{(8)} $
+2. $0.2DC9_{(16)}$
+   <input type="number" style="background-color:#0F1217;color:white;"> $_{(2)};
+   $<input type="number" style="background-color:#0F1217;color:white;">
+   $_{(8)}$
    <details>
    <summary style="color: green;">See Answer Q2</summary>
 
-   $ = 0.2,D,C,9_{(16)}; \\ = 0000.0010,1101,1100,1001_{(2)}; \\ =
+   $= 0.2,D,C,9_{(16)}; \\ = 0000.0010,1101,1100,1001_{(2)}; \\ =
    {\color{gray}00}0,000.001,011,011,100,100,1{\color{gray}00}_{(2)} ; \\ =
-   0.133444_{(8)}; $
+   0.133444_{(8)};$
    <h3>
 
-   $ 0.2DC9_{(16)} = { \color{green} 0.0010110111001001_{(2)} } = {
-   \color{green} 0.133444_{(8)} } $
+   $0.2DC9_{(16)} = { \color{green} 0.0010110111001001_{(2)} } = {
+   \color{green} 0.133444_{(8)} }$
    </h3>
     </details>
     <hr />
 
-3. $ 3D6.5E29_{(16)} $
-   <input type="number" style="background-color:#0F1217;color:white;">$ _{(2)};
-   $ <input type="number" style="background-color:#0F1217;color:white;"> $
-   _{(8)} $
+3. $3D6.5E29_{(16)}$
+   <input type="number" style="background-color:#0F1217;color:white;"> $_{(2)};
+   $<input type="number" style="background-color:#0F1217;color:white;">
+   $_{(8)}$
+
    <details>
    <summary style="color: green;">See Answer Q3</summary>
 
-   $ = 3,D,6 \cdot 5,E,2,9_{(16)}; \\ = 0011,1101,0110 \cdot
+   $= 3,D,6 \cdot 5,E,2,9_{(16)}; \\ = 0011,1101,0110 \cdot
    0101,1110,0010,1001_{(2)}; \\ = 001,111,010,110 \cdot
-   010,111,100,010,100,1{\color{gray}00}_{(2)} ; \\ = 1726.274244_{(8)}; $
+   010,111,100,010,100,1{\color{gray}00}_{(2)} ; \\ = 1726.274244_{(8)};$
    <h3>
 
-   $ 3D6.5E29_{(16)} = { \color{green} 1111010110.0101111000101001_{(2)} } = {
-   \color{green} 1726.274244_{(8)} } $
+   $3D6.5E29_{(16)} = { \color{green} 1111010110.0101111000101001_{(2)} } = {
+   \color{green} 1726.274244_{(8)} }$
    </h3>
     </details>
     <hr />
 
 ### Example 4: Convert the following Octal numbers to their Hexadecimal Number System equivalent:
 
-1. $ 6737_{(8)} $
-   <input type="number" style="background-color:#0F1217;color:white;">$ _{(2)};
-   $ <input type="number" style="background-color:#0F1217;color:white;"> $
-   _{(16)} $
+1. $6737_{(8)}$
+   <input type="number" style="background-color:#0F1217;color:white;"> $_{(2)};
+   $<input type="number" style="background-color:#0F1217;color:white;">
+   $_{(16)}$
+
    <details>
    <summary style="color: green;">See Answer Q1</summary>
 
-   $ = 6,7,3,7_{(8)}; \\ = 110,111,011,111_{(2)}; \\ = 1101,1101,1111_{(2)}; \\
-   = D,D,F_{(16)}; $
+   $= 6,7,3,7_{(8)}; \\ = 110,111,011,111_{(2)}; \\ = 1101,1101,1111_{(2)}; \\
+   = D,D,F_{(16)};$
    <h3>
 
-   $ 6737_{(8)} = { \color{green} 110111011111_{(2)} } = { \color{green}
-   DDF_{(16)} } $
+   $6737_{(8)} = { \color{green} 110111011111_{(2)} } = { \color{green}
+   DDF_{(16)} }$
    </h3>
     </details>
     <hr />
 
-2. $ 0.7201_{(8)} $
-   <input type="number" style="background-color:#0F1217;color:white;">$ _{(2)};
-   $ <input type="number" style="background-color:#0F1217;color:white;"> $
-   _{(16)} $
+2. $0.7201_{(8)}$
+   <input type="number" style="background-color:#0F1217;color:white;"> $_{(2)};$
+   <input type="number" style="background-color:#0F1217;color:white;"> $_{(16)}$
    <details>
    <summary style="color: green;">See Answer Q2</summary>
 
-   $ = 0 \cdot 7,2,0,1_{(8)}; \\ = 000 \cdot 111,010,000,001_{(2)}; \\ =
-   {\color{gray}0}000 \cdot 1110,1000,0001{(2)}; \\ = 0 \cdot E,8,1_{(16)}; $
+   $= 0 \cdot 7,2,0,1_{(8)}; \\ = 000 \cdot 111,010,000,001_{(2)}; \\ =
+   {\color{gray}0}000 \cdot 1110,1000,0001{(2)}; \\ = 0 \cdot E,8,1_{(16)};$
    <h3>
 
-   $ 0.7201_{(8)} = { \color{green} 0.111010000001_{(2)} } = { \color{green}
-   0.E81_{(16)} } $
+   $0.7201_{(8)} = { \color{green} 0.111010000001_{(2)} } = { \color{green}
+   0.E81_{(16)} }$
    </h3>
     </details>
     <hr />
 
-3. $ 42051.643_{(8)} $
-   <input type="number" style="background-color:#0F1217;color:white;">$ _{(2)};
-   $ <input type="number" style="background-color:#0F1217;color:white;"> $
-   _{(16)} $
+3. $42051.643_{(8)}$
+   <input type="number" style="background-color:#0F1217;color:white;"> $_{(2)};$
+   <input type="number" style="background-color:#0F1217;color:white;"> $_{(16)}$
    <details>
    <summary style="color: green;">See Answer Q2</summary>
 
-   $ = 4,2,0,5,1 \cdot 6,4,3_{(8)}; \\ = 100,010,000,101,001 \cdot
+   $= 4,2,0,5,1 \cdot 6,4,3_{(8)}; \\ = 100,010,000,101,001 \cdot
    110,100,011_{(2)}; \\ = {\color{gray}0}100,0100,0010,1001 \cdot
-   1101,0001,1{\color{gray}000}_{(2)}; \\ = 4429 \cdot D18_{(16)}; $
+   1101,0001,1{\color{gray}000}_{(2)}; \\ = 4429 \cdot D18_{(16)};$
    <h3>
 
-   $ 42051.643_{(8)} = { \color{green} 100010000101001.110100011_{(2)} } = {
-   \color{green} 4429.D18_{(16)} } $
+   $42051.643_{(8)} = { \color{green} 100010000101001.110100011_{(2)} } = {
+   \color{green} 4429.D18_{(16)} }$
    </h3>
     </details>
     <hr />
