--- a/modules/2.md
+++ b/modules/2.md
@@ -5,43 +5,23 @@
 
 # 1.2 DECIMAL NUMBER SYSTEM
 
-- Decimal number system has a base 10 and uses digits 0, 1, 2, 3, 4, 5, 6, 7, 8,
-  and 9
-- To represent numbers bigger than 9 we use the principle of positional value
-  which is based on powers of 10 (same as the base).
-- This means that each place of the digits in a number written in decimal number
-  system has a specified weight.
+- Decimal number system has a base $10$ and uses digits $0, 1, 2, 3, 4, 5, 6, 7, 8,$ and $9$.
+- To represent numbers bigger than 9 we use the principle of positional value which is based on powers of 10 (same as the base).
+- This means that each place of the digits in a number written in decimal number system has a specified weight.
 
-  | Thousand      | Hundred       | Tens          | Ones       | Tenths     | Hundredth  | Thousandth |
-  | ------------- | ------------- | ------------- | ---------- | ---------- | ---------- | ---------- |
-  | $ {10^{-3}} $ | $ {10^{-2}} $ | $ {10^{-1}} $ | $ {10^0} $ | $ {10^1} $ | $ {10^2} $ | $ {10^3} $ |
+| Thousand      | Hundred       | Tens          | Ones       | Tenths     | Hundredth  | Thousandth |
+|:-------------:|:-------------:|:-------------:|:----------:|:----------:|:----------:|:----------:|
+| ${10^{-3}}$ | ${10^{-2}}$ | ${10^{-1}}$ | ${10^0}$ | ${10^1}$ | ${10^2}$ | ${10^3}$ |
 
-- To write a decimal representation means to express the number in terms of its
-  digits and powers of 10 (the base of decimal number system).
-
+- To write a decimal representation means to express the number in terms of its digits and powers of 10 (the base of decimal number system).
 - For example,
-- $ { \color{pink} 6543 } \\ = 6000 + 500 + 40 + 3 \\ = { \color{green}
-  6(10^3) + 5(10^2) + 4(10^1) + 3(10^0) } $
-
-- $ { \color{pink} 20339.194 } \\ = { \color{green} 2(10^4) + 0(10^3) +
-  3(10^2) + 3(10^1) + 9(10^0) + 1(10^{-1}) + 9(10^{-2}) + 4(10^{-3}) } $
+- ${\color{pink} 6543} \\ = 6000 + 500 + 40 + 3 \\ = {\color{green} 6(10^3) + 5(10^2) + 4(10^1) + 3(10^0)}$
+- ${\color{pink} 20339.194} \\ = {\color{green} 2(10^4) + 0(10^3) + 3(10^2) + 3(10^1) + 9(10^0) + 1(10^{-1}) + 9(10^{-2}) + 4(10^{-3}) }$
 
 ## Example 1: Write the decimal representation of the following numbers:
 
-1. $ {\color{pink} 13,706 } \\ = 10,000 + 3000 + 700 + 00 + 6 \\ = {
-   \color{green} 1(10^4) + 3(10^3) + 7(10^2) + 0(10^1) + 6(10^0) } $
-
-2. $ { \color{pink} 983.89 } \\ = 900 + 80 + 3 \cdot 80 + 9 \\ = { \color{green}
-   9(10^2) + 8(10^1) + 3(10^0) + 8(10{-1}) + 9(10^{-2}) } $
-
-3. $ { \color{pink} 0.000,05 } \\ = 0 \cdot 0 + 00 + 000 + 000,0 + 000,05 \\ = 0
-   \cdot 000.05 \\ = { \color{gray} 0(10^0) + 0(10^{-1}) + 0(10^{-2}) +
-   0(10^{-3}) + 0(10^{-4}) + 5(10^{-5}) } \\ = { \color{green} 5(10^{-5}) } $
-
-4. $ { \color{pink} 0.610,508 } \\ = 0 \cdot 6 + 01 + 000 + 0005 + 00000 +
-   000008 \\ = { \color{green} 0(10^0) + 6(10^{-1}) + 1(10^{-2}) + 0(10^{-3}) +
-   5(10^{-4}) + 0(10^{-5}) + 8(10^{-6}) } $
-
-5. $ { \color{pink} 4473.3491 } \\ = 4,000 + 400 + 70 + 3 \cdot 3 + 04 + 009 +
-   0001 \\ = { \color{green} 4(10^3) + 4(10^2) + 7(10^1) + 3(10^0) +
-   3(10^{-1}) + 4(10^{-2}) + 9(10^{-3}) + 1(10^{-4})} $
+1. ${\color{pink} 13,706 } \\ = 10,000 + 3000 + 700 + 00 + 6 \\ = {\color{green}1(10^4) + 3(10^3) + 7(10^2) + 0(10^1) + 6(10^0) }$
+2. ${ \color{pink} 983.89 } \\ = 900 + 80 + 3 \cdot 80 + 9 \\ = { \color{green}9(10^2) + 8(10^1) + 3(10^0) + 8(10{-1}) + 9(10^{-2}) }$
+3. ${ \color{pink} 0.000,05 } \\ = 0 \cdot 0 + 00 + 000 + 000,0 + 000,05 \\ = 0\cdot 000.05 \\ = { \color{gray} 0(10^0) + 0(10^{-1}) + 0(10^{-2}) + 0(10^{-3}) + 0(10^{-4}) + 5(10^{-5}) } \\ = { \color{green} 5(10^{-5}) }$
+4. ${ \color{pink} 0.610,508 } \\ = 0 \cdot 6 + 01 + 000 + 0005 + 00000 + 000008 \\ = { \color{green} 0(10^0) + 6(10^{-1}) + 1(10^{-2}) + 0(10^{-3}) + 5(10^{-4}) + 0(10^{-5}) + 8(10^{-6}) }$
+5. ${ \color{pink} 4473.3491 } \\ = 4,000 + 400 + 70 + 3 \cdot 3 + 04 + 009 + 0001 \\ = { \color{green} 4(10^3) + 4(10^2) + 7(10^1) + 3(10^0) + 3(10^{-1}) + 4(10^{-2}) + 9(10^{-3}) + 1(10^{-4})}$
